--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -13,7 +13,7 @@
 		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
-		<link rel="stylesheet" href="/static/css/common.css?v=6">
+		<link rel="stylesheet" href="/static/css/common.css?v=7">
 		<script>
 			var cssfn = 'light.css';
 			var cssversion = '?v=4';
@@ -197,7 +197,7 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
 							<form id="response-form" method="post" action="/save_answer" enctype="multipart/form-data" onsubmit="document.getElementById('response-loading-gif').style.display = 'block'; document.getElementById('send-response-btn').disabled = true;">
 								{% csrf_token %}
 								<input type="hidden" name="question_id" value="{{ question.id }}">
-								<textarea maxlength="5000" class="form-control" placeholder="Escreva uma resposta..." name="text" required="required"></textarea>
+								<textarea maxlength="5000" class="form-control large-compact" placeholder="Sua resposta" name="text" required="required" onclick="$(this).css('height', '120px')"></textarea>
 								<input class="btn btn-outline-primary" type="submit" value="Enviar" id="send-response-btn">
 								<label for="upload-photo"><img src="/static/images/camera.png?version=3" width="25px"> <span id="upload-photo-text"></span></label>
 								<input type="file" accept="image/*" name="file" id="upload-photo" onclick="return veracity_test({{ user_p.total_points }}, {% MINIMUM_POINTS_FOR_POSTING_IMAGES %});">
