--- a/main_app/templates/base/response-content.html
+++ b/main_app/templates/base/response-content.html
@@ -32,8 +32,8 @@
 
 		{% if response.creator.user.username == user.username %}
 			<div class="btn-group" role="group" style="float: right;">
-				<button class="btn btn-outline-primary" onclick="delete_response(this, {{ response.id }})"><i class="fas fa-trash"></i>&nbsp;Apagar</button>
-				<button class="btn btn-outline-primary" onclick="document.getElementById('edit-response-form').style.display='block'"><i class="fas fa-edit"></i>&nbsp;Editar</button>
+				<button class="btn btn-outline-primary btn-sm" onclick="delete_response(this, {{ response.id }})"><i class="fas fa-trash"></i>&nbsp;Apagar</button>
+				<button class="btn btn-outline-primary btn-sm" onclick="document.getElementById('edit-response-form').style.display='block'"><i class="fas fa-edit"></i>&nbsp;Editar</button>
 			</div>
 		{% elif question.creator.user.username == user.username %}
 			{% if question.may_choose_answer %}
