--- a/static/css/common.css
+++ b/static/css/common.css
@@ -13,7 +13,7 @@
 */
 
 
-/* Formulário de responder perguntas em question/x */
+/* Formulário de responder perguntas. */
 textarea.large-compact {
 	height: 65px;
 	transition: all 0.3s ease-out;
