--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -13,7 +13,7 @@
 		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<script src="/static/js/cookieman.js?v=1"></script>
-		<link rel="stylesheet" href="/static/css/common.css?v=7">
+		<link rel="stylesheet" href="/static/css/common.css?v=7.1">
 		<script>
 			var cssfn = 'light.css';
 			var cssversion = '?v=4';
@@ -60,12 +60,14 @@ $(function() {
 function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Você tem certeza que deseja apagar sua resposta?')){$.ajax({url:'/delete_response',data:{response_id:response_id,},complete:function() {response_button_dom_el.parentElement.parentElement.parentElement.parentElement.remove();}})}}
 		</script>
 		
-		
-		{% if SHOW_AD %}
-			<script type='text/javascript' src='//pl16413934.alternativecpmgate.com/d6/7a/10/d67a10c6aac13f8da9beabf04bd46d6b.js'></script>
+		{% if user.is_authenticated %}
+			<script>
+				current_user = {
+					'username': '{{ user.username }}',
+					'profile_picture_url': '{{ user_p.avatar.url }}'
+				}
+			</script>
 		{% endif %}
-		
-		
 	</head>
 	<body>
 
@@ -77,7 +79,7 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
 					<div class="poster-container">
 						<a class="poster-info" href="/user/{{ question.creator.user.username }}">
 							<div class="poster-profile-pic-container">
-								<img class="poster-profile-pic-popover" width="45px" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}">
+								<img title="{{ question.creator.user.username }}" class="poster-profile-pic-popover" width="45px" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}">
 							</div>
 							<div class="poster-text-container">
 								<div>
@@ -253,7 +255,6 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
 
 <script src="/static/js/linkify/linkify.min.js"></script>
 <script src="/static/js/linkify/linkify-jquery.min.js"></script>
-<script src="/static/js/question.js?v=14"></script>
 <script>
 var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
 var commentformbgcolor='bg-white'; var commentbgcolor='bg-light';
@@ -263,6 +264,7 @@ if (getDarkCookie() == 'true') {
 }
 </script>
 <script src="/static/js/general_functions.js?version=2"></script>
+<script src="/static/js/question.js?v=14.4"></script>
 
 	</body>
 
