Simplificação de CSS - signup/signin

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -1,6 +1,6 @@
 /* General */
 body {
-  background-color: #222;
+  background-color: #222 !important;
   color: #f8f9fa !important;
 }
 .bg-main {
@@ -29,9 +29,9 @@ body {
   color: #f8f9fa;
 }
 .form-control {
-  border: 1px solid rgba(0,0,0,.125);
-  background-color: #394046;
-  color: #f8f9fa;
+  border: 1px solid rgba(0,0,0,.125) !important;
+  background-color: #394046 !important;
+  color: #f8f9fa !important;
 }
 .form-control:focus {
   background-color: #394046;
@@ -77,3 +77,18 @@ hr {
   border: none;
 }
 /* Question-end */
+
+/* Correção de "behavior" inoportuno do webkit,
+   que muda cor do input quando um auto-fill é
+   usado - sem o seletor abaixo, o form ficará
+   branco-azulado caso o user escolha um email
+   do auto-fill */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-box-shadow: 0 0 0px 1000px #344a60 inset;
+    -webkit-text-fill-color: white !important;
+}
+/* Correção-end */
