Fix signin/signup em mobile

--- a/main_app/templates/signin.html
+++ b/main_app/templates/signin.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 
-		<main class="signin-form"><br><br>
+		<main class="signin-form card-body"><br><br>
 			<center id="logo"><img src="/static/images/asker.png" alt="Asker"></center><br>
 			
 			{{login_error|safe}}
