--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 	</head>
 	<body>
-		<main class="signup-form"><br><br>
+		<main class="signup-form card-body"><br><br>
 			<center id="logo"><img src="/static/images/asker.png" alt="Asker"></center><br>
 			
 			{{ error|safe }}
