Fix: "sua resposta:" escuro em dark mode

--- a/main_app/templates/base/popular-questions.html
+++ b/main_app/templates/base/popular-questions.html
@@ -31,7 +31,7 @@
 						<div class="user-response" data-iddapergunta="{{ question.id }}">
 							<hr>
 							<p>
-								<font color="black">Sua resposta:</font><br>
+								<span>Sua resposta:</span><br>
 									{% answer user.username question.id %}
 							</p>
 						</div>
