--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -38,7 +38,7 @@
 	<ul class="list-group list-group-flush" id="n_questions-list">
 	</ul>
 	
-	<a class="btn btn-outline-primary" href="/news?page={{ questions.next_page_number }}">Próxima página</a>
+	<a class="btn btn-outline-primary" href="/news?page=" id="next_page_recent_questions">Próxima página</a>
 </section>
 <!-- !Questões recentes -->
 
@@ -61,11 +61,7 @@ popular_questions=[{% for q in popular_questions %}{"id":{{ q.id }},"text":"{{ q
 
 <script src="/static/js/linkify/linkify.min.js"></script>
 <script src="/static/js/linkify/linkify-jquery.min.js"></script>
-<<<<<<< HEAD
-<script src="/static/js/index.js?v=22.7"></script>
-=======
 <script src="/static/js/index.js?v=30"></script>
->>>>>>> 79fd38aafb60c3aae65be0081d942b082fa9ed8d
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
