--- a/main_app/templates/base/response-content.html
+++ b/main_app/templates/base/response-content.html
@@ -10,7 +10,7 @@
 				
 				<div class="poster-text-container">
 					<div>
-						<span>
+						<span class="r-username">
 							{{ response.creator.user.username }}
 						</span>
 						<span title="{{ response.pub_date }}" class="post-pub-date">
