--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -146,6 +146,7 @@
 						<!--
 						<i class="far fa-flag" id="question-popover" data-toggle="popover" data-content="<p>Para denunciar essa pergunta, use o botão abaixo. Use apenas quando necessário.</p><button class='btn btn-outline-danger' onclick='report_question({{ question.id }}, this)'>Denunciar</button>"></i>
 						-->
+						<!--
 						<style>
 							.question-options {
 								float: right;
@@ -153,7 +154,7 @@
 						</style>
 						<div class="question-options">
 							<i class="fas fa-ellipsis-v"></i>
-						</div>
+						</div>-->
 					{% endif %}
 
 					{% if question.creator.user.username == user.username %}
