--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -171,7 +171,7 @@
 					{% if not ANSWERED %}
 						{% ablockb question.creator.user.username user.username as BLOCKED %}
 						{% if not BLOCKED %}
-							<form id="formulario_de_resposta" enctype="multipart/form-data">
+							<form id="formulario_de_resposta">
 								{% csrf_token %}
 								<input type="hidden" name="question_id" value="{{ question.id }}">
 								<textarea maxlength="5000" class="form-control large-compact" placeholder="Sua resposta" name="text" required="required" onclick="$(this).css('height', '120px')"></textarea>
@@ -223,6 +223,8 @@
 				
 				$.ajax({
 					url: "/save_answer",
+					contentType: false,
+					processData: false,
 					method: "post",
 					data: $(formulario_de_resposta).serialize(),
 					complete: function(data) {
