--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -223,6 +223,7 @@
 				
 				$.ajax({
 					url: "/save_answer",
+					cache: false,
 					contentType: false,
 					processData: false,
 					method: "post",
