--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -181,7 +181,7 @@
 									Enviar
 								</button>
 								
-								<label for="upload-photo">
+								<label for="upload-photo" onclick="alert('Funcionalidade em manutenção.'); return false;">
 									&nbsp;<i class="fas fa-camera fa-lg"></i>
 									<span id="upload-photo-text"></span>
 								</label>
