--- a/main_app/templates/base/response-content.html
+++ b/main_app/templates/base/response-content.html
@@ -57,6 +57,7 @@
 		{% if response.creator.user.username == user.username %}
 			<div class="btn-group" role="group" style="float: right;">
 				<button class="btn btn-outline-primary btn-sm" onclick="delete_response(this, {{ response.id }})"><i class="fas fa-trash"></i>&nbsp;Apagar</button>
+				<button class="btn btn-outline-primary btn-sm" onclick="$(this.parentElement.parentElement.nextElementSibling).toggle(0);"><i class="fas fa-edit"></i>&nbsp;Editar</button>
 			</div>
 		{% elif question.creator.user.username == user.username %}
 			{% if question.may_choose_answer %}
@@ -93,4 +94,11 @@
 			
 		</div>
 	</div>
+	
+	<form method="post" action="/edit-response" style="display: none;">
+		{% csrf_token %}
+		<input type="hidden" name="response_id" value="{{ response.id }}">
+		<textarea rows="8" maxlength="5000" class="form-control" placeholder="Sua resposta" name="text" required>{{ response.text }}</textarea>
+		<input class="btn btn-outline-primary" type="submit" value="Salvar">
+	</form>
 </li>
